fixed create probe page aligning

--- a/branding/css/spacewalk-fixes.less
+++ b/branding/css/spacewalk-fixes.less
@@ -6,3 +6,9 @@
   	margin-left: 0;
   }
 }
+
+.form-horizontal .text {
+        margin-top: 0;
+        margin-bottom: 0;
+        padding-top: 7px;
+}
